--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
          </title>
   </head>
 <body>
+  <img src="https://avatars.githubusercontent.com/u/90601388?v=4">
   <h1>Header</h1>
 Hello there, awesome person!
   </body>
