--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
          </title>
   </head>
 <body>
+  1. github
+  2. linkedin
+  3. classroom
   <img src="https://avatars.githubusercontent.com/u/90601388?v=4">
   <h1>Header</h1>
 Hello there, awesome person!
